--- a/templates/contact.html
+++ b/templates/contact.html
@@ -97,9 +97,9 @@
                   <li class="call-btn button gradient-bg mt-3 mt-md-0">
                     <a
                       class="d-flex justify-content-center align-items-center"
-                      href="https://linktr.ee/drivekraft"
+                      href="https://play.google.com/store/search?q=drivekraft&c=apps"
                       target="_blank"
-                      ><img src="{{ url_for('static', filename='images/emergency-call.png') }}" /> Book Appointment
+                      ><img style="height: 32px; width: 32px;" src="{{ url_for('static', filename='images/download-icon-white-24.jpg') }}" /> Download App
                     </a>
                   </li>
                 </ul>
@@ -191,15 +191,15 @@
                 animate__fadeInUp
               "
             >
-              <h2 class="d-flex align-items-center">Emergency</h2>
+              <h2 class="d-flex align-items-center">Android app download</h2>
 
               <div class="call-btn search button gradient-bg mt-3 mt-md-0">
                 <a
                   class="d-flex justify-content-center align-items-center"
-                  href="#"
+                  href="https://play.google.com/store/search?q=drivekraft&c=apps"
                 >
-                  <img src="{{ url_for('static', filename='images/emergency-call.png') }}" />
-                  Book Appointment
+                  <img style="height: 32px; width: 32px;" src="{{ url_for('static', filename='images/download-icon-white-24.jpg') }}" />
+                  Download App
                 </a>
               </div>
 
