--- a/templates/blog.html
+++ b/templates/blog.html
@@ -98,9 +98,9 @@
                   <li class="call-btn button gradient-bg mt-3 mt-md-0">
                     <a
                       class="d-flex justify-content-center align-items-center"
-                      href="https://linktr.ee/drivekraft"
+                      href="https://play.google.com/store/search?q=drivekraft&c=apps"
                       target="_blank"
-                      ><img src="{{ url_for('static', filename='images/emergency-call.png') }}" /> Book Appointment
+                      ><img style="height: 32px; width: 32px;" src="{{ url_for('static', filename='images/download-icon-white-24.jpg') }}" /> Download App
                     </a>
                   </li>
                 </ul>
