--- a/templates/index.html
+++ b/templates/index.html
@@ -113,9 +113,9 @@
                   <li class="call-btn button gradient-bg mt-3 mt-md-0">
                     <a
                       class="d-flex justify-content-center align-items-center"
-                      href="https://linktr.ee/drivekraft"
+                      href="https://play.google.com/store/search?q=drivekraft&c=apps"
                       target="_blank"
-                      ><img src="{{ url_for('static', filename='images/emergency-call.png') }}" /> Book Appointment
+                      ><img style="height: 32px; width: 32px;" src="{{ url_for('static', filename='images/download-icon-white-24.jpg') }}" /> Download App
 
                     </a>
                   </li>
@@ -362,9 +362,9 @@
                 <div class="call-btn button gradient-bg1 mt-3 mt-md-0">
                   <a
                     class="d-flex justify-content-center align-items-center"
-                    href="https://linktr.ee/drivekraft"
+                    href="https://play.google.com/store/search?q=drivekraft&c=apps"
                     target="_blank"
-                    ><img src="{{ url_for('static', filename='images/emergency-call.png') }}" />Book Appointment</a
+                    ><img style="height: 32px; width: 32px;" src="{{ url_for('static', filename='images/download-icon-white-24.jpg') }}" />Download App</a
                   >
                 </div>
               </div>
@@ -642,8 +642,8 @@
                 <a
                   class="d-flex justify-content-center align-items-center"
                   target="_blank"
-                  href="https://linktr.ee/drivekraft"
-                  ><img src="{{ url_for('static', filename='images/emergency-call.png') }}" /> Book Appointment</a
+                  href="https://play.google.com/store/search?q=drivekraft&c=apps"
+                  ><img style="height: 32px; width: 32px;" src="{{ url_for('static', filename='images/download-icon-white-24.jpg') }}" /> Download App</a
                 >
               </div>
               <p
