Changed features section

--- a/templates/index.html
+++ b/templates/index.html
@@ -243,7 +243,8 @@
                   >
                     <div class="features-image">
                       <img
-                        src="{{ url_for('static', filename='images/features-section/free.png') }}"
+                        style="height: 127px; width: 140px;"
+                        src="{{ url_for('static', filename='images/features-section/Annonymous_convo.png') }}"
                         alt="an icon"
                       />
                     </div>
@@ -257,15 +258,15 @@
                           animate__fadeInUp animate__animated
                           wow
                           animate__fadeInUp
+                          style="color: white;"
                         "
                       >
-                        <a  href="https://www.facebook.com/groups/1479654902391457" style="color: white;">Free Community Support</a>
+                      Anonymous Conversations
                       </h3>
                     </header>
                     <div class="entry-content">
                       <p class="animate__animated wow animate__fadeInUp">
-                        Clear all your queries and concerns from experts for free.
-                        Click <a href="https://www.facebook.com/groups/1479654902391457" style="color: white;">here</a> to join the community
+                        Your identity will remain anonymous from everyone while using the app
                       </p>
                     </div>
                   </div>
@@ -303,13 +304,13 @@
                           animate__fadeInUp
                         "
                       >
-                        Flexible
+                      Professional Listeners
                       </h3>
                     </header>
 
                     <div class="entry-content">
                       <p class="animate__animated wow animate__fadeInUp">
-                        Choose time and mode of session as per your convenience
+                        Trained individuals who offer empathetic support through attentive listening skills
                       </p>
                     </div>
                   </div>
