Changes in contact page

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -159,28 +159,7 @@
               </ul>
             </div>
           </div>
-
-          <div class="col-12 col-md-4 mt-5 mt-lg-0">
-            <div
-              class="
-                opening-hours
-                h-100
-                animate__animated
-                wow
-                animate__fadeInUp
-              "
-            >
-              <h2 class="d-flex align-items-center">Opening Hours</h2>
-
-              <ul class="p-0 m-0">
-                <li>Monday - Thursday <span>15:00 - 19:00</span></li>
-                <li>Friday <span> 14:00 - 18:30</span></li>
-                <li>Saturday <span>14:30 - 19.00</span></li>
-                <li>Sunday <span>4:00 - 19.00</span></li>
-              </ul>
-            </div>
-          </div>
-
+          
           <div class="col-12 col-md-4 mt-5 mt-lg-0">
             <div
               class="
@@ -209,6 +188,29 @@
               </p>
             </div>
           </div>
+          <div class="col-12 col-md-4 mt-5 mt-lg-0">
+            <div
+              class="
+                opening-hours
+                h-100
+                animate__animated
+                wow
+                animate__fadeInUp
+              "
+            >
+              <h2 class="d-flex align-items-center">iOS App Download</h2>
+
+              {% comment %} <ul class="p-0 m-0">
+                <li>Monday - Thursday <span>15:00 - 19:00</span></li>
+                <li>Friday <span> 14:00 - 18:30</span></li>
+                <li>Saturday <span>14:30 - 19.00</span></li>
+                <li>Sunday <span>4:00 - 19.00</span></li>
+              </ul> {% endcomment %}
+              <br><br><br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;iOS App is coming soon....
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
