--- a/templates/index.html
+++ b/templates/index.html
@@ -348,7 +348,7 @@
                           animate__fadeInUp
                         "
                       >
-                        Affordable
+                        Affordable Pricing
                       </h3>
                     </header>
                     <div class="entry-content">
