--- a/templates/about.html
+++ b/templates/about.html
@@ -166,7 +166,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2 class="animate__animated wow animate__fadeInUp">Faq & Stuff</h2>
+            <h2 class="animate__animated wow animate__fadeInUp">Faq</h2>
           </div>
 
           <div class="col-12 col-lg-6 mb-5 mb-lg-0">
