--- a/templates/contact.html
+++ b/templates/contact.html
@@ -200,12 +200,12 @@
             >
               <h2 class="d-flex align-items-center">iOS App Download</h2>
 
-              {% comment %} <ul class="p-0 m-0">
-                <li>Monday - Thursday <span>15:00 - 19:00</span></li>
-                <li>Friday <span> 14:00 - 18:30</span></li>
-                <li>Saturday <span>14:30 - 19.00</span></li>
-                <li>Sunday <span>4:00 - 19.00</span></li>
-              </ul> {% endcomment %}
+<!--              <ul class="p-0 m-0">-->
+<!--                <li>Monday - Thursday <span>15:00 - 19:00</span></li>-->
+<!--                <li>Friday <span> 14:00 - 18:30</span></li>-->
+<!--                <li>Saturday <span>14:30 - 19.00</span></li>-->
+<!--                <li>Sunday <span>4:00 - 19.00</span></li>-->
+<!--              </ul> -->
               <br><br><br>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;iOS App is coming soon....
             </div>
