--- a/templates/index.html
+++ b/templates/index.html
@@ -201,9 +201,9 @@
                             class="button gradient-bg mt-4 none"
                             >Our Blogs</a
                           >
-                          {% comment %} <a href="about.html" class="button gradient-bg mt-4"
-                            >Read More</a
-                          > {% endcomment %}
+<!--                           <a href="about.html" class="button gradient-bg mt-4"-->
+<!--                            >Read More</a-->
+<!--                          > -->
                           <div class="call-btn button gradient-bg mt-4">
                             <a
                               class="d-flex justify-content-center align-items-center"
