integrating google tags

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TS6HKEZLDJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CGYJN9NTJL"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  gtag('config', 'G-TS6HKEZLDJ');
+</script>
 
-      gtag('config', 'G-CGYJN9NTJL');
-    </script>
+
 
     <title>
       Drivekraft - Lending ears across the globe. Free Mental HealthCare Session
