--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TS6HKEZLDJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TS6HKEZLDJ');
+</script>
     <title>
       Contact || Drivekraft - Lending ears across the globe. Free Mental
       HealthCare Session
