session count bug fix

--- a/templates/psychologistDashboard.html
+++ b/templates/psychologistDashboard.html
@@ -23,7 +23,7 @@
        <td> {{ value[0] }}</td>
        <td> {{ value[2] }}</td>
        <td> {{ value[4]-50 }} </td>
-       <td> {{ value[1]-value[6 }} </td>
+       <td> {{ value[1]-value[6] }} </td>
        <td> {{ value[5] }}</td>
 
    </tr>
