--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
                     <a
                       class="d-flex justify-content-center align-items-center"
                       href="https://play.google.com/store/search?q=drivekraft&c=apps"
-                      target="_blank"
+                      target="_blank" id="playurl1"
                       ><img style="height: 32px; width: 32px;" src="{{ url_for('static', filename='images/download-icon-white-24.jpg') }}" /> Download App
 
                     </a>
@@ -209,7 +209,7 @@
                             <a
                               class="d-flex justify-content-center align-items-center"
                               href="https://play.google.com/store/search?q=drivekraft&c=apps"
-                              target="_blank"
+                              target="_blank" id="playurl2"
                               ><img style="height: 26px; width: 26px;" src="{{ url_for('static', filename='images/download-icon-white-24.jpg') }}" /> Download App
         
                             </a>
@@ -382,7 +382,7 @@
                   <a
                     class="d-flex justify-content-center align-items-center"
                     href="https://play.google.com/store/search?q=drivekraft&c=apps"
-                    target="_blank"
+                    target="_blank" id="playurl3"
                     ><img style="height: 32px; width: 32px;" src="{{ url_for('static', filename='images/download-icon-white-24.jpg') }}" />Download App</a
                   >
                 </div>
@@ -661,7 +661,7 @@
                 <a
                   class="d-flex justify-content-center align-items-center"
                   target="_blank"
-                  href="https://play.google.com/store/search?q=drivekraft&c=apps"
+                  href="https://play.google.com/store/search?q=drivekraft&c=apps" id="playurl4"
                   ><img style="height: 32px; width: 32px;" src="{{ url_for('static', filename='images/download-icon-white-24.jpg') }}" /> Download App</a
                 >
               </div>
@@ -922,5 +922,31 @@
     <script>
       new WOW().init();
     </script>
+  <script>
+  document.getElementById('playurl1').addEventListener('click', function() {
+    gtag('event', 'image_click', {
+      'event_category': 'Image Clicks',
+      'event_label': 'My Image'
+    });
+  });
+  document.getElementById('playurl2').addEventListener('click', function() {
+    gtag('event', 'image_click', {
+      'event_category': 'Image Clicks',
+      'event_label': 'My Image'
+    });
+  });
+  document.getElementById('playurl3').addEventListener('click', function() {
+    gtag('event', 'image_click', {
+      'event_category': 'Image Clicks',
+      'event_label': 'My Image'
+    });
+  });
+  document.getElementById('playurl4').addEventListener('click', function() {
+    gtag('event', 'image_click', {
+      'event_category': 'Image Clicks',
+      'event_label': 'My Image'
+    });
+  });
+</script>
   </body>
 </html>
